--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Karla">
     <title>React App</title>
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
